--- a/flutter_application_1/web/index.html
+++ b/flutter_application_1/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -32,7 +34,9 @@
   <title>flutter_application_1</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  
 </body>
 </html>
